# SpaceInvaders

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: entity.cpp  game.cpp  glad.c  main.cpp
